fixed white space

--- a/css/site.css
+++ b/css/site.css
@@ -40,17 +40,16 @@ a:hover {
   flex-direction: column;
   align-self: center;
   background-color: #f6f6ef;
-
-}
-
-.stories-container{
-  height: calc(100vh - 100px);
-  overflow: scroll;
 }
 
 .hidden {
   display: none;
 }
+
+.stories-container{
+  overflow: auto;
+}
+
 
 
 /* Forms */
@@ -129,3 +128,4 @@ form > hr {
     margin: 8px auto;
   }
 }
+
